--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "d3-force": "^3.0.0",
     "framer-motion": "^12.23.15",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-force-graph-2d": "^1.29.0",
     "react-router-dom": "^7.9.1",
     "router": "^2.2.0",
     "tailwindcss": "^4.1.13"
