--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "d3-force": "^3.0.0",
+    "firebase": "^12.3.0",
     "framer-motion": "^12.23.15",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
