--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "d3": "^7.9.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-force-graph-2d": "^1.29.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
